# POSIX

./: .gitignore  LICENSE  README.md  pyproject.toml
examples/: posix_usage.py
src/prompt_sensitivity_index/: posix.py
src/prompt_sensitivity_index/models/: __init__.py  base.py  hf_model.py
